<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/levels_screen_tint"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_marginBottom"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/levels_screen_margin_top">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/levels_screen_prev_level_imageButton"
                style="@style/PrevLevelImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/previous_level"/>

            <TextView
                android:id="@+id/levels_screen_level_title_textView"
                style="@style/LevelTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"/>

            <ImageButton
                android:id="@+id/levels_screen_next_level_imageButton"
                style="@style/NextLevelImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/next_level"/>

        </LinearLayout>

        <com.deakishin.cipherworld.gui.levelsscreen.levels.CustomViewPager
            android:id="@+id/level_ciphers_viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:overScrollMode="never"/>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ad_banner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/ad_banner_margin_vertic"
        android:layout_marginLeft="@dimen/ad_banner_margin_horiz"
        android:layout_marginRight="@dimen/ad_banner_margin_horiz"
        android:layout_marginTop="@dimen/ad_banner_margin_vertic"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ad_banner_unit_id">
    </com.google.android.gms.ads.AdView>
</LinearLayout>